...
    normalTextLabel: (currentLevel: Int) -> String,
    closeLabel: String,
    onSelect: (Int) -> Unit,
    onDismiss: () -> Unit,
) {
    AlertDialog(
        modifier = Modifier.testTag("quata-portable-rich-text-heading-dialog"),
        onDismissRequest = onDismiss,
        title = { Text(title) },
        text = {
            Column(verticalArrangement = Arrangement.spacedBy(4.dp)) {
                for (level in 1..6) {
                    DropdownMenuItem(
...
