...
        }
    }

    Surface(
        modifier = modifier
            .fillMaxWidth()
            .testTag("quata-portable-rich-text-editor"),
        shape = MaterialTheme.shapes.medium,
        tonalElevation = 1.dp,
        color = MaterialTheme.colorScheme.surface,
        contentColor = MaterialTheme.colorScheme.onSurface,
    ) {
        Column(
...
